--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -2,7 +2,7 @@ if not platform: platform = '6'
 hutch, user, password = ('tst', 'tstopr', 'pcds')
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
-conda_rel = 'ps-2.1.2'
+conda_rel = 'ps-3.1.1'
 
 collect_host = 'drp-tst-acc06'
 
@@ -21,7 +21,7 @@ collect_host = 'drp-tst-acc06'
 procmgr_config = [
  {                        id:'partca-'+platform, conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
- { host: collect_host,    id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -P tst -B DAQ:LAB2 -x 2'},
+ { host: collect_host,    id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -P tst -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -t 30000 -H'+collect_host+' -E'},
  #{                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H'+collect_host+' -L logs'},
  # trigger event builder
