--- a/psdaq/psdaq/cnf/neh-canary.cnf
+++ b/psdaq/psdaq/cnf/neh-canary.cnf
@@ -1,5 +1,4 @@
-platform = '0'
-username = 'lcls2'
+if not platform: platform = '0'
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.152.255'
 conda_rel = 'ps-2.1.2'
@@ -8,7 +7,7 @@ conda_rel = 'ps-2.1.2'
 collect_host = 'drp-neh-cmp001'
 
 groups = '0'
-hutch = 'tst'
+hutch, user, password = ('tst', 'tstopr', 'pcds')
 drp_cmd  = 'drp -P '+hutch+' -d /dev/datadev_1 -C '+collect_host+' -o /u1'
 
 # procmgr FLAGS: <port number> static port number to keep executable
@@ -30,12 +29,12 @@ procmgr_config = [
  { id:'pyxpm'  , port:'29452', flags:'s', conda:conda_rel, env:epics_env, cmd:'pyxpm --ip 10.0.1.103 -P DAQ:NEH:XPM:0'},  # XTPG
 # { id:'xpmpva' , flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmpva -x DAQ:NEH:XPM:0'},
  { id:'groupca', flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:NEH 0 '+groups},
- { id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ { id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
 
  { id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host+' -P '+hutch},
  { id:'meb1', flags:'spu', conda:conda_rel, cmd:'monReqServer -P '+hutch+' -d -q 4 -C '+collect_host},
  { id:'xppts_0', flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D ts -l 0x1 -ksim_length=4'},
- { id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -B DAQ:NEH -x 0 -C BEAM -P '+hutch},
+ { id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -B DAQ:NEH -x 0 -C BEAM -P '+hutch+' -r /dev/null'},
  { flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
 
