--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -78,9 +78,9 @@ add_executable(tstEbLfLink      tstEbLfLink.cc)
 
 #add_executable(ibMon            ibMon.cc)
 
-#add_executable(ctrb
-#  ctrb.cc
-#)
+add_executable(ctrb
+  ctrb.cc
+)
 
 add_executable(teb
   teb.cc
@@ -154,13 +154,14 @@ target_link_libraries(tstEbLfLink
 #  rt
 #)
 #
-#target_link_libraries(ctrb
-#  contributor
-#  collection
-#  exporter
-#  Threads::Threads
-#  rt
-#)
+
+target_link_libraries(ctrb
+  contributor
+  collection
+  exporter
+  Threads::Threads
+  rt
+)
 
 target_link_libraries(teb
   eventBuilder
@@ -178,7 +179,7 @@ install(TARGETS
   utilities
   contributor
   eventBuilder
-  #ctrb
+  ctrb
   teb
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
