--- a/psdaq/psdaq/cnf/tmo.cnf
+++ b/psdaq/psdaq/cnf/tmo.cnf
@@ -2,7 +2,7 @@ if not platform: platform = '4'
 
 epics_host = 'daq-tst-dev02'
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
-conda_rel = 'ps-3.1.10'
+conda_rel = 'ps-3.1.11'
 hsd_epics_dev02 = 'DAQ:LAB2:HSD:DEV02'
 hsd_epics_dev06 = 'DAQ:LAB2:HSD:DEV06'
 
@@ -83,6 +83,7 @@ procmgr_config = [
 
  # TimeTool
  #{ host: 'drp-tst-dev012', id:'tmott_0',     flags:'pu',   conda:conda_rel, cmd:drp_cmd0+' -D tt'},
+ #{ host: 'drp-tst-dev003', id:'tmoopal_0',   flags:'pu',   conda:conda_rel, cmd:drp_cmd0+' -D opal'},
 
  # Timing System
  { host: 'drp-tst-dev013', id:'tmots_0',     flags:'sxpu', conda:conda_rel, cmd:drp_cmd1+' -D ts' },
