--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -2,7 +2,6 @@ if not platform: platform = '1'
 hutch, user, password = ('tst', 'tstopr', 'pcds')
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
-conda_rel = 'ps-3.1.10'
 
 collect_host = 'drp-tst-dev002'
 
@@ -19,14 +18,14 @@ collect_host = 'drp-tst-dev002'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- {                        id:'groupca',flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 1 5'},
- {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
- { host: collect_host,    id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -P '+hutch+' -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
- {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -E -t 30000 -l WARNING -H '+collect_host},
+ {                        id:'groupca',flags:'s', env:epics_env, cmd:'groupca DAQ:LAB2 2 1 5'},
+ {                        id:'procstat', flags:'p', cmd:'procstat p'+platform+'.cnf.last'},
+ { host: collect_host,    id:'control', flags:'sxpu', env:epics_env, cmd:'control -v -C BEAM -P '+hutch+' -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
+ {                        flags:'xp', id:'control_gui', cmd:'control_gui -E -t 30000 -l WARNING -H '+collect_host},
  # trigger event builder
- { host: 'drp-tst-dev009', id:'teb1', flags:'xpu', conda:conda_rel, cmd:'teb -P '+hutch+' -C '+collect_host},
+ { host: 'drp-tst-dev009', id:'teb1', flags:'xpu', cmd:'teb -P '+hutch+' -C '+collect_host},
  # meb
- { host: 'drp-tst-dev009', id:'meb1', flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P '+hutch+' -d -q 4 -C '+collect_host},
+ { host: 'drp-tst-dev009', id:'meb1', flags:'sxpu', cmd:'monReqServer -P '+hutch+' -d -q 4 -C '+collect_host},
  # drp
- { host: 'drp-tst-dev009', id:'cam_0', flags:'sxpu', conda:conda_rel, cmd:'drp -o /ffb01/data -l 0xf -D fakecam -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
+ { host: 'drp-tst-dev009', id:'cam_0', flags:'sxpu', cmd:'drp -o /ffb01/data -l 0xf -D fakecam -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
 ]
