--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -2,7 +2,6 @@ if not platform: platform = '6'
 hutch, user, password = ('tst', 'tstopr', 'pcds')
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
-conda_rel = 'ps-3.1.10'
 
 collect_host = 'drp-tst-acc06'
 
@@ -19,13 +18,13 @@ collect_host = 'drp-tst-acc06'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- {                        id:'partca-'+platform, conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
- {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
- { host: collect_host,    id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -P tst -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
- {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -t 30000 -H'+collect_host+' -E'},
- #{                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H'+collect_host+' -L logs'},
+ {                        id:'partca-'+platform, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ {                        id:'procstat', flags:'p', cmd:'procstat p'+platform+'.cnf.last'},
+ { host: collect_host,    id:'control', flags:'spu', env:epics_env, cmd:'control -v -C BEAM -P tst -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
+ {                        flags:'xp', id:'control_gui', cmd:'control_gui -t 30000 -H'+collect_host+' -E'},
+ #{                        flags:'xp', id:'control_gui', cmd:'control_gui -H'+collect_host+' -L logs'},
  # trigger event builder
- { host: 'drp-tst-dev011', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
+ { host: 'drp-tst-dev011', id:'teb1', flags:'spu', cmd:'teb -C '+collect_host},
  # cameras
- { host: 'drp-tst-dev011', id:'cam1_0', flags:'spux', conda:conda_rel, cmd:'drp -l 0xf -D fakecam -d /dev/datadev_1  -P tst -C '+collect_host}
+ { host: 'drp-tst-dev011', id:'cam1_0', flags:'spux', cmd:'drp -l 0xf -D fakecam -d /dev/datadev_1  -P tst -C '+collect_host}
 ]
